[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-icv-tree"
version = "0.2.1"
description = "Materialised path tree structures for Django — configurable path format, queryset returns, async-safe, no tenancy coupling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Nigel Copley"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "django",
    "tree",
    "materialised-path",
    "treebeard",
    "mptt",
]
dependencies = [
    "Django>=5.2",
]

[project.optional-dependencies]
icv-core = ["django-icv-core"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[project.urls]
Homepage = "https://github.com/icvoss/django-icv-tree"
Documentation = "https://github.com/icvoss/django-icv-tree"
Changelog = "https://github.com/icvoss/django-icv-tree/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/icvoss/django-icv-tree/issues"
"Source Code" = "https://github.com/icvoss/django-icv-tree"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
]
ignore = [
    "E501",   # line length handled by the formatter
    "N806",   # User = get_user_model() is standard Django convention
    "SIM105", # contextlib.suppress less readable than try/except/pass for DoesNotExist
]

[tool.ruff.lint.isort]
known-first-party = ["icv_tree"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
strict = false

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/testing/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
